--- a/src/crossword.tex
+++ b/src/crossword.tex
@@ -216,7 +216,7 @@ function initialiseButtons() {
 function restart() {
     % Update word count
     wordCount = this.getField("cmWords").value;
-    % Use gui to set amount of orientations
+    % Use GUI to set amount of orientations
     if (this.getField("cmDirs").value == 2) {
         ORIENTATIONS = [
             [1, 0], [0, 1]
